# product-editor

./: .gitignore  Products-Editor-Linux.spec  app.icns  app.py  pyproject.toml  run.sh
.github/workflows/: build.yml
data/: settings.json
frontend/: index.html
frontend/src/: app.js  main.js  style.css
prodlib/: __init__.py  core.py  store.py
scripts/: prod-thumbnailer.py  register-linux.sh  register-macos.sh  register-windows.bat
