[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "products-desktop-editor"
version = "1.0.0"
description = "Dedicated .prod file editor"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=5.0",
    "pyyaml>=6.0",
    "bottle>=0.13",
]
